--- a/RestaurantAPI/appsettings.json
+++ b/RestaurantAPI/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Authentication": {
+    "JwtKey": "Private_key_dont_share",
+    "JwtExpiteDays": 15,
+    "JwtIssuer": "http://restaurantapi.com"
+  },
+
 }
