--- a/RestaurantAPI/appsettings.Development.json
+++ b/RestaurantAPI/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "RestaurantDbConnection": "Data Source=DESKTOP-ODOFPG3\\MYSSQLSERVER;Initial Catalog=RestaurantAPI;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
